--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div style="padding-top: 5px;">
+        <div style="padding-top: 1rem;">
             <div class="error-text" x-text="error"></div>
             <table>
                 <template x-for="line in output">
